Fixes 'wobbly' website on mobile

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,15 +1,11 @@
-.homeText {
+.homeStyles {
     width: 100%;
+    overflow-x: hidden; /*This fixes the "wobbly" page problem :) */
+
 }
 
 .home-overlay-div {
     background: transparent;
-}
-
-.bannerButtons:hover{
-    background: red;
-    color: white;
-    background: rgb(205, 193, 205);
 }
 
 
